@@ -2,6 +2,8 @@
 	- added original copyright statement of OpenBSD arc4random code.
 	- created tube signaling solution on windows, as a pipe replacement.
 	  this makes background asynchronous resolution work on windows.
+	- removed very insecure socketpair compat code. It also did not
+	  work with event_waiting. Solved by pipe replacement.
 
 22 July 2008: Wouter
 	- moved pipe actions to util/tube.c. easier porting and shared code.
